# archidemus.github.io

./: .eslintrc.js  .gitignore  .prettierrc  404.md  CLAUDE.md  CNAME  README.md  _config.yml  about.md  astro.config.mjs  base.md  bun.lockb  categories.html  eslint.config.js  index.html  next.config.js  package.json  tailwind.config.mjs  tsconfig.json
.github/workflows/: upload_page.yml
.sass-cache/c4f9e92fa6974d6f747d14b4cdc3bdf60dd6771d/: main.scssc  syntax.scssc
_includes/: date_es.html  header.html
_layouts/: page.html  post.html
_posts/: 2016-10-18-very-long-title-post.md  2017-07-22-pantalla-de-inicio-en-android.md
_sass/: main.scss
_site/: 404.html  about.html  base.html  feed.xml  index.html  sitemap.xml
_site/android/: pantalla-de-inicio-en-android.html
_site/assets/: core.css
_site/categories/: index.html
_site/prueba/: very-long-title-post.html
app/: .gitignore  bun.lockb  package.json
components/: Footer.tsx  GlobalStyle.tsx  Main.tsx  Menu.tsx  constants.ts
components/about/: index.tsx
docs/: 404.html  about.html  blog.html  index.html  photos.html
helpers/: loader.js
jobs/: .gitignore  api.py  pyproject.toml
jobs/expenses/scraper/: dolar.html  get_transactions.py  parse_unbilled.py  parse_unbilled_dolar.py
jobs/workdir/expenses/: santander_category.json
jobs/workdir/expenses/transacciones/: nacional_unbilled_1744561644.490595.json
pages/: _app.tsx  _document.tsx  about.tsx  index.tsx
posts/: first.md  second.md  third.md
public/: llms.txt  robots.txt  sitemap.xml
server/: main.py  pyproject.toml
(+111 files in other folders)
