[tool.poetry]
name = "archidemus-me"
version = "0.1.0"
description = ""
authors = ["Ignacio Norambuena <inorambuenaa@gmail.com>"]
readme = "README.md"
packages = [{include = "archidemus"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.31.0"
python-dotenv = "^1.1.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
